[package]
name = "oreboot-cpu"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
oreboot-arch = { path = "../arch", optional = true }
raw-cpuid = { version = "10.6.0", optional = true }
aarch64-cpu = { version = "9.3", optional = true }

[features]
arm64 = ["aarch64-cpu"]
