[package]
name = "oreboot-soc"
version = "0.1.0"
authors = ["Oreboot Authors"]
edition = "2021"

[dependencies]
consts = { path = "../lib/consts" }
oreboot-cpu = { path = "../cpu", optional = true }
oreboot-asm = { path = "../lib/asm", optional = true }
tock-registers = "0.8.1"

aarch64-cpu = { version = "9.3", optional = true }
heapless = { version = "0.7.16", optional = true }
raw-cpuid = { version = "10.6.0", optional = true }
util = { path = "../lib/util", optional = true }
vcell = { version = "0.1.3", optional = true }

d1-pac = { version = "0.0.31", features = ["critical-section"], optional = true }
embedded-hal = { version = "1.0.0-alpha.9", optional = true }
embedded-hal-nb = { version = "1.0.0-alpha.1", optional = true }
nb = "1"

[features]
amd = [
  "util",
  "raw-cpuid",
  "heapless",
  "vcell",
]
rockchip = ["aarch64-cpu", "oreboot-asm", "oreboot-cpu/arm64"]
sunxi = []
sunxi_d1 = ["sunxi", "d1-pac", "embedded-hal", "embedded-hal-nb"]
