[package]
name = "acpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
amd = []
intel = []

[dependencies]
heapless = "0.7.16"
log = "0.4"
spin = "0.9.4"
device = { path = "../device" }
util = { path = "../util" }
